# Klasifikasi-Penyakit-Paru-Paru

./: README.md  gabungan.py  pyproject.toml
Code/: UAP_FFNN.ipynb  UAP_Random_Forest.ipynb  ffnn_model.h5  random_forest_model (4).sav
