[project]
name = "UAP_ML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rahajengfebri", email = "riri.iis24@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
